<?xml version="1.0"?>
<package format="2">
  <name>rtt_pcl</name>
  <version>0.1.0</version>
  <description>An Orocos RTT typekit plugin for PCL types</description>

  <maintainer email="orocos-dev@lists.mech.kuleuven.be">Orocos Developers</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rtt_pcl</url>
  <url type="bugtracker">https://github.com/orocos/rtt_pcl</url>

  <author email="johannes@intermodalics.eu">Johannes Meyer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rtt</depend>

  <build_depend>libpcl-all-dev</build_depend>
  <build_export_depend>libpcl-all-dev</build_export_depend>
  <exec_depend>libpcl-all</exec_depend>

</package>
